projects/compiler/test/typechecker/match/error_invalid_else_type.out
Error at %TEST_DIR%/typechecker/match/error_invalid_else_type.abra:7:15
Illegal operator
  |    else s => s + 1
                   ^
No operator '+' exists between types Int? and Int
